--- a/ex3/css/client.css
+++ b/ex3/css/client.css
@@ -1,12 +1,11 @@
 
 body,
 html {
-   background-color: #adb3b8;
+   background-color: #6e808f;
    width: 1300px;
     margin: auto;
     height: 1030px;
     position: static;
-
 }
 .first{
     width: 1300px;
@@ -18,14 +17,12 @@ html {
     position: static;
     top: 720px;
 }
-#picture{
-    
+#picture{   
      width: 200px;
       height: 100px;
       float: right;
     
 }
-
 .container { 
     width: 1300px;
     height: 100px;
@@ -44,8 +41,9 @@ html {
     position: static;
 }
 
-table, td {
+table, td , tr {
   border: 1px solid white;
+  
 }
 .button {
     width: 78px;
@@ -73,28 +71,20 @@ table, td {
 
 #myTable2{
     font-size: 15px;
-   margin: 0px;
+    margin: 0px;
     padding: 0px;
     font-family: Pacifico;
-    position: relative;
     color:#2e2926;
-     float: right;
+    float: right;
     background-color:#b8d4e9;
-    
-    top: 20px;
-    right: 10px;
+    position: fixed;
+    /* top: 20px;
+    right: 10px; */
+    top: 30%;
+    left: 40%;
 }
 
-#Date{
-    
-    font-size: 25px;
-    margin: 0;
-    font-family: Pacifico;
-    position: relative;
-    color:#dee4e9;
-    float: right;   /* הזזה ימינה */
-    
-}
+
  #Name{
     font-size: 25px;
     margin: 10px;
@@ -103,34 +93,24 @@ table, td {
     color:#dee4e9;
       
  }
- #slct{
-      margin: 10px;
-     
-      width: 500px;
-      height: 40px;
-      background-color:#f4faff;
-    
-     
- }
 
-#Find_countries{
+#Find_countries, #sortButton{
     margin: 10px;
-    width: 62px;
-    height: 30px;
+    width: 152px;
+    height: 60px;
     background-color: #4b667a;
     border-radius: 50px;
     color: white;
     box-shadow: 2px 2px 1px 1px rgb(0, 0, 0);
-    
 }
 
 
-#Find_countries:hover {
+#Find_countries:hover, #sortButton:hover {
     background-color: #19232b;
 }
 .details{
     margin: 10px;
-    height: 30px;
+    height:30px;
     background-color: #4b667a;
     border-radius: 50px;
     color: white;
@@ -139,6 +119,56 @@ table, td {
 }
 .details:hover {
     background-color: #222f38;
+}
+.first{
+    width: 1300px;
+    height: 50px;
+    padding-top: 0px;
+    margin: auto;
+    padding: initial;
+    background-color: #2f5777;
+    position: static;
+    top: 720px;
+}
+.container { 
+    width: 1300px;
+    height: 1000px;
+    padding-top: 0px;
+    margin: auto;
+    padding: initial;
+    background-color: #adb3b8;
+    position: static;
+    top: 720px;
+}
+h2{
+    margin: 8px;
+    
+    padding: 8px;
+    color: white;
+}
+#name-group{
+ 
+    padding: 8px;
+
+}
+/* ---------------------------------------------------------- */
+
+.btn {
+    margin: 10px;
+    width: 72px;
+    height: 60px;
+    background-color: #4b667a;
+    border-radius: 50px;
+    color: white;
+    box-shadow: 2px 2px 1px 1px rgb(0, 0, 0);}
+    .btn:hover {
+        background-color: #19232b;
+    }   
+#name-group{
+    height: 60px;
+}
+.form-group{
+    width: 152px;
 }
 
 
