--- a/ex3/css/client.css
+++ b/ex3/css/client.css
@@ -1,3 +1,6 @@
+#sorts_type{
+    margin-left: 15px;
+}
 
 body,
 html {
@@ -94,7 +97,7 @@ table, td , tr {
       
  }
 
-#Find_countries, #sortButton{
+button, #sortButton{
     margin: 10px;
     width: 152px;
     height: 60px;
@@ -105,7 +108,7 @@ table, td , tr {
 }
 
 
-#Find_countries:hover, #sortButton:hover {
+button:hover, #sortButton:hover {
     background-color: #19232b;
 }
 .details{
